diesel_compile_tests/tests/fail/insert_from_select_with_on_conflict_without_where_clause_not_supported_on_sqlite.rs
extern crate diesel;

use diesel::*;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let connection = SqliteConnection::establish("").unwrap();

    users::table.select(users::id)
        .insert_into(users::table)
        .into_columns(users::id)
        .on_conflict(users::id)
        .do_nothing()
        .execute(&connection)
        .unwrap();

}
