diesel_compile_tests/tests/fail/insert_from_select_with_on_conflict_without_where_clause_not_supported_on_sqlite.stderr
error[E0271]: type mismatch resolving `<diesel::SqliteConnection as diesel::Connection>::Backend == diesel::pg::Pg`
  --> $DIR/insert_from_select_with_on_conflict_without_where_clause_not_supported_on_sqlite.rs:19:10
   |
19 |         .execute(&connection)
   |          ^^^^^^^ expected struct `diesel::sqlite::Sqlite`, found struct `diesel::pg::Pg`
